--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -52,7 +52,7 @@
         <RadzenPanelMenu>
             <RadzenPanelMenuItem class="rz-ripple" Style="color:azure" Text="Home" Icon="home" Path="/" />
             <RadzenPanelMenuItem class="rz-ripple" Style="color:azure" Text="Dashboard" Icon="dashboard" Path="/dashboard" />
-            <RadzenPanelMenuItem class="rz-ripple" Style="color:azure" Text="Configure Nodes" Icon="" Path="/configure" />
+            <RadzenPanelMenuItem class="rz-ripple" Style="color:azure" Text="Configure Nodes" Icon="build" Path="/configure" />
         </RadzenPanelMenu>
         <div class="py-3 py-md-4" style="padding: var(--rz-panel-menu-item-padding);">
             <RadzenText Text="FarmerBotWebUI v1.0.0" TextStyle="Radzen.Blazor.TextStyle.Caption" style="color: var(--rz-text-disabled-color);" TagName="Radzen.Blazor.TagName.P" TextAlign="Radzen.TextAlign.Center" />
