--- a/Client/Pages/FarmerBotDashboard.razor
+++ b/Client/Pages/FarmerBotDashboard.razor
@@ -3,6 +3,7 @@
 @using FarmerbotWebUI.Shared.BotConfig;
 @inject IEventConsoleService EventConsoleService
 @inject IAppSettings AppSettings
+@inject INodeStatusService NodeStatusService
 @inject IDockerService DockerService
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
@@ -15,7 +16,7 @@
     <RadzenSplitterPane Size="40%" Min="10%" Max="70%">
         <RadzenSplitter Orientation="Orientation.Vertical" Collapse=@OnCollapse Expand=@OnExpand>
             @*### top left - On/off and farmerbot status section*@
-            <RadzenSplitterPane Size="45%" Min="35%" Max="60%" Style="background-color: rgb(137, 174, 192); display: flex; justify-content: left; align-items:start">
+            <RadzenSplitterPane Size="45%" Min="35%" Max="60%" Style="background-color: rgb(137, 174, 192); display: flex; justify-content: left; align-items:start; overflow: auto;">
                 <RadzenStack Style="margin-left: 20px; margin-top: 20px" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Start" Gap="1rem" Wrap="FlexWrap.Wrap">
                     @foreach (var botStatus in DockerService.ActualFarmerBotStatusList)
                     {
@@ -33,7 +34,7 @@
                     </RadzenStack>
             </RadzenSplitterPane>
             @*### bottom left - no idea by now section*@
-            <RadzenSplitterPane style="background-color: rgb(137, 174, 192); display: flex; justify-content: left; align-items:start; ">
+            <RadzenSplitterPane style="background-color: rgb(137, 174, 192); display: flex; justify-content: left; align-items:start; overflow: auto;">
                 <RadzenStack Style="margin-left: 20px; margin-top: 20px" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Start" Gap="1rem" Wrap="FlexWrap.Wrap">
                     @foreach (var botStatus in DockerService.ActualFarmerBotStatusList)
                     {
@@ -46,12 +47,12 @@
     <RadzenSplitterPane>
         <RadzenSplitter Collapse=@OnCollapseDisabled Expand=@OnExpand Resize=@OnResizeDisabled>
             @*### full right - Node list and stati*@
-            <RadzenSplitterPane style="display: flex; justify-content: center; align-items: center;">
-                <RadzenStack Style="margin-left: 20px; margin-top: 20px" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Start" Gap="1rem" Wrap="FlexWrap.Wrap">
-                    @*@foreach (var botStatus in DockerService.ActualFarmerBotStatus)
+            <RadzenSplitterPane style="display: flex; justify-content: center; align-items: center; overflow: auto;">
+                <RadzenStack Style="margin-left: 20px; margin-top: 20px;" Orientation="Orientation.Horizontal" AlignItems="AlignItems.Start" Gap="1rem" Wrap="FlexWrap.Wrap">
+                    @foreach (var nodeStatusCollection in NodeStatusService.ActualNodeStatusCollectionList)
                     {
-                        //<NodesStatus nodeStatus=@ />
-                    }*@
+                        <NodesStatus nodeStatus=@nodeStatusCollection />
+                    }
                 </RadzenStack>
             </RadzenSplitterPane>
         </RadzenSplitter>
@@ -61,38 +62,12 @@
 @code {
     private ServiceResponse<List<FarmerBotStatus>>? Response { get; set; } = new ServiceResponse<List<FarmerBotStatus>>(){ Data = new List<FarmerBotStatus>(), Message = "", Success = false };
     private bool startButton = false;
-    //private bool stopButton = false;
     private bool busy = false;
-
-    protected override void OnAfterRender(bool firstRender){
-        //if (DockerService.ActualFarmerBotStatus != null)
-        //{
-        //    if (!DockerService.ActualFarmerBotStatus.Status())
-        //    {
-        //        startButton = true;
-        //    }
-        //    else
-        //    {
-        //        startButton = false;
-        //    }
-        //}
-    }
 
     protected override void OnInitialized()
     {
-        //if (DockerService.ActualFarmerBotStatus != null)
-        //{
-        //    if (!DockerService.ActualFarmerBotStatus.Status())
-        //    {
-        //        startButton = true;
-        //    }
-        //    else
-        //    {
-        //        startButton = false;
-        //    }
-        //    StateHasChanged();
-        //}
         DockerService.StatusChanged += StateHasChanged;
+        NodeStatusService.StatusChanged += StateHasChanged;
     }
 
     private async Task UpdateDockerComposeAsync(string botName)
@@ -172,5 +147,6 @@
     public void Dispose()
     {
         DockerService.StatusChanged -= StateHasChanged;
+        NodeStatusService.StatusChanged -= StateHasChanged;
     }
 }
